# Router/auth.routes.js
@@ -13,7 +13,9 @@ const {
 const AuthValidator = require("../Middlewares/auth_validation_middleware.js");
 const {
   getNewAccessTokenUsingRefreshToken,
+  verifyAccessToken,
 } = require("../Middlewares/verify_token_middleware.js");
+const cleanEntireAuthCollection = require("../Utils/cleaner_auth_collection.js");
 const AuthRouter = Router();
 
 AuthRouter.post("/register", AuthValidator, register);
@@ -26,5 +28,7 @@ AuthRouter.post("/add_new_password", addNewPassword);
 AuthRouter.post("/resend_verification_code", resendVerificationCode);
 AuthRouter.post("/refresh", getNewAccessTokenUsingRefreshToken);
 AuthRouter.post("/logout", logout);
+
+AuthRouter.delete("/delete_auth_DB_collection", cleanEntireAuthCollection)
 
 module.exports = AuthRouter;
